# IUM

./: .gitignore  README.md  pyproject.toml  requirements.txt
client_analiser/: example_post.json  main.py  send_post.py
client_analiser/app/: main.py
client_analiser/models/: __init__.py  model_a.py  model_b.py  model_interface.py  predict_model.py
client_analiser/templates/: index.html
data/: extract_ab_test_data.ipynb  extract_test_data.ipynb  utils.py
data/ab_test/: ab_test_good_data.json
data/iteration_1/raw/: deliveries.jsonl  products.jsonl
data/iteration_2/raw/: deliveries.jsonl
data/iteration_3/raw/: deliveries.jsonl  sessions.jsonl  users.jsonl
features/: build_features.py
microservice/: main.py
microservice/features/: __init__.py  build_features.py  build_features_nn.py
microservice/model/: __init__.py  model_a.py  model_b.py  model_interface.py
microservice/models/: __init__.py  model_a.py  model_b.py  model_interface.py
models/: __init__.py  performance.py  train_utils_nn.py  utils.py
models/neural_networks/: NeuralNetworkRegressor.py  SimpleRegressor.py  __init__.py  train.ipynb  utils.py
models/parameters/: model_b_v1  model_nn_v1  simple_v1
notebooks/: current_research.ipynb  explore_data.ipynb  explore_data_other_project.ipynb  session_extraction.ipynb  session_extraction.py  test.ipynb  test.py  train.py.ipynb  train_network.ipynb  users_aggregation.ipynb  users_linear.ipynb
tests/: model_b.py  send_good_data.py  send_post.py
