[tool.poetry]
name = "client_analiser"
version = "0.1.0"
description = ""
authors = ["Jakub Robaczewski <kubarob13@gmail.com>, Michał Matak"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
ipykernel = "^6.4.1"
jupyter = "^1.0.0"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
jinja2 = "^3.0.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
